edited the link in the index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <center>
         <H1>Welcome to Stacks API</H1>
     </center>
-    <!-- ssh -o ServerAliveInterval=60 -R stacks.serveo.net:80:localhost/stacks/backend/api:8080 serveo.net -->
+    <!-- ssh -o ServerAliveInterval=60 -R stacks.serveo.net:80:localhost:8080 serveo.net -->
 
     <!-- http://stacks.serveo.net/stacks/backend/api/ -->
 
