added wachtwoord and status, and made updates and read_operations possible voor freelancers en klant

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         "woonplaats": "Paramaribo",
         "opleiding": "",
         "werkervaring": "",
-        "wachtwoord":"wachtwoord"
+        "wachtwoord":"wachtwoord",
+        "status":"pending"
         
     }
     </pre>
